force-app/main/default/src/objects/HealthCloudGA__EhrVaccinationProtocol__c/HealthCloudGA__EhrVaccinationProtocol__c.object-meta.xml
<CustomObject>
    <label>EHR Vaccination Protocol</label>
    <nameField>
        <displayFormat>Prot-{0}</displayFormat>
        <label>EHR Vaccination Protocol ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Vaccination Protocols</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>