force-app/main/default/src/objects/HealthCloudGA__EhrVaccinationProtocol__c/fields/HealthCloudGA__Authority__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Authority__c</fullName>
    <description>Who is responsible for protocol</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Authority</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>