force-app/main/default/src/objects/HealthCloudGA__EhrVaccinationProtocol__c/fields/HealthCloudGA__DoseSequence__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DoseSequence__c</fullName>
    <description>What dose number within series?</description>
    <label>Dose Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>