force-app/main/default/src/objects/HealthCloudGA__EhrVaccinationProtocol__c/fields/HealthCloudGA__DoseStatusCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DoseStatusCode__c</fullName>
    <description>Dose Status Symbol in syntax defined by the system</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dose Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>