force-app/main/default/src/objects/HealthCloudGA__EhrVaccinationProtocol__c/fields/HealthCloudGA__DoseStatusLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DoseStatusLabel__c</fullName>
    <description>Dose status symbol in friendly terms</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dose Status Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>