force-app/main/default/src/objects/HealthCloudGA__EhrVaccinationProtocol__c/fields/HealthCloudGA__DoseStatusReasonCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DoseStatusReasonCode__c</fullName>
    <description>Dose Status Reason Symbol in syntax defined by the system</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dose Status Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>