force-app/main/default/src/objects/HealthCloudGA__EhrVaccinationProtocol__c/fields/HealthCloudGA__DoseStatusReasonSystem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DoseStatusReasonSystem__c</fullName>
    <description>Identity of the terminology system</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dose Status Reason System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>