force-app/main/default/src/objects/HealthCloudGA__EhrVaccinationProtocol__c/fields/HealthCloudGA__SeriesDoses__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SeriesDoses__c</fullName>
    <description>Recommended number of doses for immunity</description>
    <label>Series Doses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>